# ChessBot_old

./: .gitignore  .gitmodules  README.md  download_model.sh  requirements.txt
ChessLibary/: CMakeCache.txt  CMakeLists.txt  Makefile  TODO.md  cmake_install.cmake  run.sh  test.py
ChessLibary/src/: bit_board.cpp  bit_board.hpp  board.cpp  board.hpp  board_hash.cpp  board_hash.hpp  consts.hpp  location.hpp  main.cpp  move.cpp  move.hpp  piece.cpp  piece.hpp  python_bindings.cpp  utils.cpp  utils.hpp
models/: checkpoint  checkpoint.index  checkpoint_v2.index
new_chess_lib/Demo/: Demo.cpp  Demo.h  Makefile  main.cpp
src/: evaluate_elo.ipynb  model_test.ipynb  play_chess.ipynb  preprocess.ipynb
